<resources>
    <string name="app_name">PetCareRoom</string>
    <string name="login_user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_login">Iniciar Sesión</string>
    <string name="forget">¿Aún no tienes cuenta?</string>
    <string name="registrarse">Registrate</string>
    <string name="correo">Correo</string>
    <string name="rep_pass_registro">Repetir contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="logout">Cerrar Sesión</string>

    <string name="title_home">Inicio</string>
    <string name="title_pet">Mascotas</string>
    <string name="title_service">Servicios</string>
    <string name="user_inicio_fragment">Nombre de usuario</string>
    <string name="texto_inicio_fragment">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="publicar_inicio_fragment">publicar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_mascota">imagen mascota</string>
    <string name="nombre_pet">Nombre</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="tipe_pet">Tipo</string>
    <string name="raza">Raza</string>
    <string name="sexo">Sexo</string>
    <string name="chip">#chip</string>
    <string name="_pet">Agregar</string>
    <string name="edite">editar</string>
    <string name="title_perfil">Perfil</string>
    <string name="publicar_texto">¿Que piensas?</string>
    <string name="pet_text">Cuidar Mascota</string>
    <string name="pasear">Pasear perro</string>
    <string name="out">Cerrar Sesion</string>
    <string name="guardar">guardar</string>
    <string name="contacto">Datos de contacto</string>
    <string name="review">Reseña</string>
    <string name="update_count">Actualizar Perfil</string>
    <string name="name_user">Nombre</string>
    <string name="user">Usuario</string>
    <string name="city">Ciudad</string>
    <string name="email">Correo</string>
    <string name="save">Guardar</string>

</resources>
