<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroPetCare">

    <EditText
        android:id="@+id/nombre_registro"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordes"
        android:hint="@string/name_user"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/usuario_registro"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordes"
        android:hint="@string/login_user"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_registro" />

    <EditText
        android:id="@+id/correo_registro"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bordes"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_registro" />

    <EditText
        android:id="@+id/pass_registro"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bordes"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_registro" />

    <EditText
        android:id="@+id/rep_pass"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bordes"
        android:hint="@string/rep_pass_registro"
        android:inputType="textPassword"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_registro" />

    <Button
        android:id="@+id/botonregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_bordes"
        android:text="@string/registrar"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rep_pass" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopetcare" />

</androidx.constraintlayout.widget.ConstraintLayout>