<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPetCare">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8sp"
        app:srcCompat="@drawable/logopetcare"/>

    <EditText
        android:id="@+id/user_login"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/bordes"
        android:hint="@string/login_user"
        android:inputType="text"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/bordes"
        android:padding="10sp"
        android:textAlignment="textStart"
        android:textSize="22sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login" />

    <Button
        android:id="@+id/login"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_bordes"
        android:text="@string/iniciar_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_login" />

    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/forget"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/register_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2sp"
        android:layout_marginStart="16dp"
        android:background="#00000000"
        android:text="@string/registrarse"
        android:textColor="#342cfc"
        app:layout_constraintStart_toEndOf="@+id/register_login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>